[tool.poetry]
name = "20240823-aca-slow"
version = "0.1.0"
description = ""
authors = ["Anthony Chu <anthony@anthonychu.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
